tests/paczka1/fuzzy1/10807071.err
Error in line 1: S140 S140 82,4
Error in line 7: y0t S835 66,9
Error in line 16: HQEX7Eq S214 -4,8
Error in line 12: y0t S418 82,6
Error in line 25: H7O S214 -2,1
Error in line 24: H7O S214 62,7
Error in line 26: H7O S418 96,6
